--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "del": "6.0.0",
     "gulp": "4.0.2",
     "gulp-htmlmin": "5.0.1",
-    "gulp-less": "5.0.0",
+    "gulp-less": "^5.0.0",
     "gulp-libsquoosh": "^1.0.12",
     "gulp-plumber": "1.2.1",
     "gulp-postcss": "9.0.1",
@@ -45,5 +45,8 @@
   "engines": {
     "node": "16.13.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "swiper": "^8.2.5"
+  }
 }
